header z-index fix

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -30,6 +30,7 @@ header {
   left: 0;
   height: 88px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  z-index: 10;
 
   .mobile {
     position: absolute;
